Интерфейсы созданы. Бугрина

--- a/OrderingGiftsBugrina.csproj
+++ b/OrderingGiftsBugrina.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Interfaces\Icontext.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -108,7 +109,6 @@
   <ItemGroup>
     <Folder Include="Classes\Common\" />
     <Folder Include="Elements\" />
-    <Folder Include="Interfaces\" />
     <Folder Include="Pages\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
