--- a/OrderingGiftsBugrina.csproj
+++ b/OrderingGiftsBugrina.csproj
@@ -66,6 +66,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Common\DBConnection.cs" />
+    <Compile Include="Classes\OrderContext.cs" />
     <Compile Include="Interfaces\Icontext.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -107,7 +109,6 @@
     <Resource Include="Icon_1.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Classes\Common\" />
     <Folder Include="Elements\" />
     <Folder Include="Pages\" />
   </ItemGroup>
